# adventofcode2021

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
src/: runner.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day21.rs  graph.rs  mod.rs  template.rs
