[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
itertools = "0.10.3"
log = "0.4.0"
env_logger = "0.8.4"
regex = "1.5.4"

[[bin]]
name = "runner"
path = "src/runner.rs"
